<resources>
    <string name="app_name">TurtleSoup</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_done">done</string>
    <!-- Strings used for fragments for navigation -->
    <string name="puzzles_fragment_label">@string/app_name</string>
    <string name="puzzle_post_fragment_label">New Puzzle</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="finish">Finish</string>
    <string name="retry">Retry</string>
    <string name="puzzle_image" />
    <string name="no_puzzles">no puzzles</string>
    <string name="title">title</string>
    <string name="hint_description">description</string>
    <string name="tags">tags</string>
    <string name="error_form">Please fill up all fields!</string>
    <string name="success_puzzle_post">Puzzle Post successfully!</string>
    <string name="message">message</string>
    <string name="send">send</string>
    <string name="no_chats">no chats</string>

    <string name="content_description_favorite">Show your favorite puzzles</string>
    <string name="content_description_search">Search puzzles</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_puzzles">All Puzzles</string>
    <string name="menu_puzzles_belong_to_me">Puzzles belong to me</string>

    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="true">Puzzle</string>
    <string name="msg_subscribe_failed">Failed to subscribe to puzzle topic</string>
    <string name="fcm_message">FCM Message</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
