<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="kate.tutorial.turtlesoup.MainActivity">

    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/outline_favorite_24"
        android:title="@string/action_favorite"
        android:contentDescription="@string/content_description_favorite"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/outline_search_24"
        android:title="@string/action_search"
        android:contentDescription="@string/content_description_search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
