<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View"/>

        <variable
            name="viewModel"
            type="kate.tutorial.turtlesoup.chat.ChatsViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ChatsFragment">

        <ImageButton
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/outline_send_24"
            android:contentDescription="@string/send"
            app:layout_constraintBottom_toBottomOf="@id/edit"
            app:layout_constraintEnd_toEndOf="parent" />
        <EditText
            android:id="@+id/edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/message"
            android:importantForAutofill="no"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/send" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/chatList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            tools:listitem="@layout/item_chat"
            app:chatItems="@{viewModel.chats}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/edit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <TextView
            android:id="@+id/no_chats_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/chatList"
            app:layout_constraintStart_toStartOf="@id/chatList"
            android:text="@string/no_chats"
            android:visibility="@{viewModel.noChats ? View.VISIBLE : View.GONE}" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
