<?xml version="1.0" encoding="utf-8"?>
<navigation android:id="@+id/nav_graph"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/PuzzlesFragment">

    <fragment
        android:id="@+id/PuzzlesFragment"
        android:name="kate.tutorial.turtlesoup.puzzle.PuzzlesFragment"
        android:label="@string/puzzles_fragment_label"
        tools:layout="@layout/fragment_puzzles">

        <action
            android:id="@+id/action_PuzzlesFragment_to_PuzzleFragment"
            app:destination="@id/PuzzleFragment" />
        <action
            android:id="@+id/action_PuzzlesFragment_to_PuzzlePostActivity"
            app:destination="@id/PuzzlePostActivity" />
    </fragment>
    <fragment
        android:id="@+id/PuzzleFragment"
        android:name="kate.tutorial.turtlesoup.puzzle.PuzzleFragment"
        android:label=""
        tools:layout="@layout/fragment_puzzle">

        <argument
            android:name="puzzleId"
            app:argType="string" />
        <action
            android:id="@+id/action_PuzzleFragment_to_ChatsFragment"
            app:destination="@id/ChatsFragment" />
    </fragment>

    <fragment
        android:id="@+id/ChatsFragment"
        android:name="kate.tutorial.turtlesoup.chat.ChatsFragment"
        android:label=""
        tools:layout="@layout/fragment_chats">

        <argument
            android:name="id"
            app:argType="string" />
    </fragment>

    <activity
        android:id="@+id/PuzzlePostActivity"
        android:name="kate.tutorial.turtlesoup.puzzle.PuzzlePostActivity"
        tools:layout="@layout/activity_post_puzzle"/>

    <fragment
        android:id="@+id/FirstFragment"
        android:name="kate.tutorial.turtlesoup.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="kate.tutorial.turtlesoup.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
</navigation>
